--- a/ICSHOP/Views/Shared/Layout_Index.cshtml
+++ b/ICSHOP/Views/Shared/Layout_Index.cshtml
@@ -5,8 +5,8 @@
 
 <!DOCTYPE HTML>
 <html>
-<head>
-    <title>@ViewBag.Title </title>
+<head>                    
+    <title>@ViewBag.Title="Index" </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="Cooks Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
